--- a/templates/basic.html
+++ b/templates/basic.html
@@ -82,7 +82,7 @@
 		 <script src="{% static 'js/quick_view.js'%}"></script>
             <script src="{% static 'js/jquery.amaran.min.js'%}"></script>
             <script src="{% static 'js/jquery.showLoading.min.js'%}"></script>
-{#            <script src="{% static 'js/custom.js'%}"></script>#}
+{#          <script src="{% static 'new_static/js/custom.js'%}"></script>#}
             <script src="{% static 'js/add_to_cart.js'%}"></script>
             <script src="{% static 'js/delete_from_cart.js'%}"></script>
             <script src="{% static 'js/delete_from_main_cart.js'%}"></script>
