--- a/templates/customuser/order.html
+++ b/templates/customuser/order.html
@@ -54,10 +54,10 @@
                                         {% for item in order.itemsinorder_set.all %}
                                         <tr class="cartProduct">
                                             <td class="cartProductThumb" style="width:20%">
-                                                <div><a href="{% url 'item_page' item.item.name_slug %}"> <img alt="img"
+                                                <div><a href="{% url 'product' item.item.name_slug %}"> <img alt="img"
                                                         {% for image in item.item.itemimage_set.all %}
                                                             {% if image.is_main %}
-                                                               src="{{ image.image_small }}
+                                                               src="{{ image.image.url }}
                                                             {% endif %}
                                                         {% endfor %}">
                                                 </a>
@@ -65,7 +65,7 @@
                                             </td>
                                             <td style="width:40%">
                                                 <div class="miniCartDescription">
-                                                    <h4><a href="{% url 'item_page' item.item.name_slug %}"> {{ item.item.name }} </a></h4>
+                                                    <h4><a href="{% url 'product' item.item.name_slug %}"> {{ item.item.name }} </a></h4>
 
                                                     {% if item.item.discount > 0 %}
 
