--- a/templates/page/new/catalog.html
+++ b/templates/page/new/catalog.html
@@ -30,13 +30,10 @@
                                              {% for category in all_category %}
 
 							<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-                            <div class="hvrbox">
-
-                                <img src="{{ category.image.url }}" alt="{{ category.name }}" class="img-responsive hvrbox-layer_bottom">
-                                <div class="hvrbox-layer_top hvrbox-layer_slideup">
-                                    <div class="hvrbox-text">{{ category.name }}<br><a href="{% url 'category' category.name_slug %}">Открыть</a></div>
-                                </div>
-                            </div>
+                             <div class="category-image">
+                            <a class="image-wrap" href="{% url 'category' category.name_slug %}" title=""><img class="img-responsive" src="{{ category.image.url }}" alt="">
+                            <span>{{ category.name }}</span></a>
+                        </div>
 
 
 							</div>
