--- a/static/new_static/css/custom.css
+++ b/static/new_static/css/custom.css
@@ -72,6 +72,7 @@
 .filter-items{
   display: flex;
   justify-content: center;
+  margin-bottom: 20px;
 }
 
 .filter-items li{
@@ -106,4 +107,19 @@
 
 .login-popup {
   background-color: rgba(0, 0, 0, 0.7);
+}
+
+.category-image{
+  position: relative;
+}
+
+.category-image span{
+  position: absolute;
+    bottom: 10px;
+    background: #0a0a0a75;
+    color: #fff;
+    width: 90%;
+    left: 5%;
+    text-align: center;
+    padding: 5px 0;
 }
