--- a/static/new_static/css/custom.css
+++ b/static/new_static/css/custom.css
@@ -110,16 +110,90 @@
 }
 
 .category-image{
+  transition: all 0.9s;
   position: relative;
+  overflow: hidden;
+  text-align: center;
+  margin-bottom: 30px;
+
 }
 
-.category-image span{
-  position: absolute;
-    bottom: 10px;
-    background: #0a0a0a75;
-    color: #fff;
-    width: 90%;
-    left: 5%;
-    text-align: center;
-    padding: 5px 0;
+
+.category-image:hover h5 {
+  opacity: 1;
+
 }
+.category-image:hover span {
+  opacity: 1;
+
+}
+.category-image:hover h5:before{
+   width: 100%;
+}
+
+.category-image-caption{
+  position: absolute;
+  bottom: 30px;
+  width: 90%;
+  margin: 5%;
+  cursor: pointer;
+
+}
+.category-image-caption a:hover{
+  color: #ffffff;
+
+}
+.category-image-caption a{
+  color: #ffffff !important;
+
+}
+
+.category-image-caption h5 {
+  opacity: 0;
+  color: #ffffff;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  -webkit-transition: opacity 1s, -webkit-transform 1s;
+  transition: opacity 1s, transform 1s;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  margin-bottom: 6px;
+}
+
+.category-image-caption span {
+  opacity: 0;
+  color: #ffffff;
+  font-size: 11px;
+  -webkit-transition: opacity 1s, -webkit-transform 1s;
+  transition: opacity 1s, transform 1s;
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+.category-image-caption h5:before {
+      position: absolute;
+      content: " ";
+      text-align: center;
+      bottom: -5px;
+      left: 0;
+      width: 0;
+      border-bottom: 1px solid #fff;
+      -webkit-transition: all 0.9s;
+      -moz-transition: all 0.9s;
+      transition: all 0.9s;
+      transition-delay: .2s;
+    }
+
+
+
+
+/*.category-image span{*/
+  /*position: absolute;*/
+    /*bottom: 10px;*/
+    /*background: #0a0a0a75;*/
+    /*color: #fff;*/
+    /*width: 90%;*/
+    /*left: 5%;*/
+    /*text-align: center;*/
+    /*padding: 5px 0;*/
+/*}*/
+
