--- a/templates/page/new/index.html
+++ b/templates/page/new/index.html
@@ -35,24 +35,18 @@
             <div class="row">
                 {% for category in all_category %}
 
-                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                         <div class="category-image">
-                            <a class="image-wrap" href="{% url 'category' category.name_slug %}" title=""><img class="img-responsive" src="{{ category.image.url }}" alt="">
-                            <span>{{ category.name }}</span></a>
+                            <a  href="{% url 'category' category.name_slug %}" title=""><img class="img-responsive" src="{{ category.image.url }}" alt=""></a>
+                                <div class="category-image-caption">
+                                  <a  href="{% url 'category' category.name_slug %}" title="">
+                                 <h5 >{{ category.name }}</h5>
+                                    <span class="category-description">{{ category.short_description }}</span>
+                                      </a>
+                                </div>
+
                         </div>
-{#                        <div class="hvrbox">#}
-{##}
-{#                            <img src="{{ category.image.url }}" alt="{{ category.name }}" class="img-responsive hvrbox-layer_bottom">#}
-{#                            <div class="hvrbox-layer_top hvrbox-layer_slideup">#}
-{#                                <div class="hvrbox-text">{{ category.name }}<br><a class="btn button btn-primary" href="{% url 'category' category.name_slug %}">Открыть</a></div>#}
-{#                            </div>#}
-{#                        </div>#}
-                        {#								<div class="banner-item effect">#}
-                        {##}
-                        {##}
-                        {#									<a class="image-wrap" href="{% url 'category' category.name_slug %}" title=""><img class="img-responsive" src="{{ category.image.url }}" alt=""></a>#}
-                        {#                                    <div>{{ category.name }} </div>#}
-                        {#								</div>#}
+
                     </div>
                 {% endfor %}
             </div><!-- end row -->
