--- a/templates/page/new/item.html
+++ b/templates/page/new/item.html
@@ -92,7 +92,7 @@
                                     data-item_id="{{ item.id }}"
                                     data-item_name="{{ item.name }}"
                                     data-item_price="{{ item.price }}"
-                                    data-item_image="{{ item.itemimage_set.first.image.url }}">
+                                    data-item_image="{{ item.itemimage_set.first.image_small }}">
                                 <span class="add2cart"><i class="glyphicon glyphicon-shopping-cart"> </i> В КОРЗИНУ </span>
                             </button>
 
