--- a/templates/page/new/cart.html
+++ b/templates/page/new/cart.html
@@ -8,7 +8,7 @@
             <div class="breadcrumb clearfix">
                 <ul class="ul-breadcrumb">
                     <li><a href="/">Главная</a></li>
-                    <li><span>Корзина</span></li>
+                    <li><span style="color: #fff !important;">Корзина</span></li>
                 </ul>
 
             </div>
