--- a/templates/page/new/catalog.html
+++ b/templates/page/new/catalog.html
@@ -6,7 +6,7 @@
             <div class="breadcrumb clearfix">
                 <ul class="ul-breadcrumb">
                     <li><a href="/" title="Home">Главная</a></li>
-                    <li><span>Каталог</span></li>
+                    <li><span style="color: #fff !important;">Каталог</span></li>
                 </ul>
 
             </div>
