--- a/templates/page/new/item.html
+++ b/templates/page/new/item.html
@@ -12,7 +12,7 @@
 							<li><a href="/" >Главная</a></li>
                             <li><a href="{% url 'catalog' %}" >Каталог</a></li>
 							<li><a href="{% url 'category'  item.category.name_slug  %}" >{{ item.category.name }}</a></li>
-							<li><span>{{ item.name }}</span></li>
+							<li><span style="color: #fff !important;">{{ item.name }}</span></li>
 						</ul>
 
 					</div>
