--- a/static/new_static/css/custom.css
+++ b/static/new_static/css/custom.css
@@ -100,7 +100,10 @@
 
   border-bottom: 2px solid #B26E6B;
 }
-
+.page-link:hover{
+  background-color: #B26E6B !important;
+  border-color: #B26E6B !important;
+}
 .our_price_display{
   color: #3c3c3c !important;
 }
