--- a/templates/page/new/registration.html
+++ b/templates/page/new/registration.html
@@ -6,7 +6,7 @@
 					<div class="breadcrumb clearfix">
 						<ul class="ul-breadcrumb">
 							<li><a href="/" title="Home">Главная</a></li>
-							<li><span>Регистрация</span></li>
+							<li><span style="color: #fff !important;">Регистрация</span></li>
 						</ul>
 
 					</div>
