--- a/templates/page/new/search.html
+++ b/templates/page/new/search.html
@@ -6,7 +6,7 @@
 					<div class="breadcrumb clearfix">
 						<ul class="ul-breadcrumb">
 							<li><a href="/" title="Home">Главная</a></li>
-							<li><span>Результаты поиска</span></li>
+							<li><span style="color: #fff !important;">Результаты поиска</span></li>
 						</ul>
 
 					</div>
